# apo1m

./: .gitignore  DISASSEMBLE
data/: default.opt
docs/: .systems.tex.swp  1m.aux  1m.dvi  1m.eps  1m.tex  1m.tex.010899  1mlayout.eps  1mtodo.txt  APO-06.dwg  Makefile  commands.tex  dome.html  lanl.txt  lower.txt  man.aux  man.dvi  man.ps  man.tex  man.tex.old  man.toc  newinst.tex  oldman.tex  public_html  rack.txt  refs.aux  robotic.tex  robotinst.tex  roc.tex  site.aux  site.dvi  site.ps  site.tex  systems.aux  systems.dvi  systems.tex  tertiary.aux  tertiary.dvi  tertiary.ps  tertiary.tex
procedure/: .smhist  aaa  aaa.pro  acquire.pro  airmass.inp  airmass.pro  alert.pro  altaz.pro  apogee.pro  apogee_close.pro  apotest.pro  biasdark.pro  boxdef.pro  caz.pro  ccdstatus.doc  ccdtemp.pro  check.pro  checkfill.pro  checkfoc.pro  chris.pro  clear.pro  close.pro  coadd.pro  coarse.pro  color.pro  compare.pro  compass.pro  compress.pro  coord.pro  darktest.pro  difphot.pro  (+171 more)
src/APOGEE.sav/apogee/libapogee-3.0.3234/apogee/: AltaData.cpp  AltaData.lo  AltaIo.lo  AltaUsbIo.lo  ApgLogger.lo  ApgTimer.lo  ApogeeCam.cpp  ApogeeFilterWheel.h  ApogeeFilterWheel.lo  Ascent.lo  AspenData.cpp  AspenEthernetIo.lo  AspenFx2.cpp  AspenIo.lo  AspenUsbIo.lo  COMHelper.cpp  CamCfgMatrix.lo  CamGen2Base.lo  CamHelpers.h  CamHelpers.lo  CamUsbIo.cpp  CameraInfo.lo  CameraIo.lo  CameraStatusRegs.lo  CcdAcqParams.lo  DeviceStrHelpers.h  FilterWheelIo.h  FindDeviceEthernet.lo  FindDeviceUsb.lo  HiC.lo  IAltaSerialPortIo.lo  ICamIo.lo  ILog.lo  ITimer.lo  ImgFix.lo  LoggerException.lo  Makefile  Makefile.am  Makefile.in  PlatformData.cpp  (+7 more)
src/APOGEE.sav/apogee/libapogee-3.0.3234/apogee/.deps/: AltaCcdAcqParams.Plo  AltaData.Plo  AltaEthernetIo.Plo  AltaF.Plo  AltaIo.Plo  AltaModeFsm.Plo  Ascent.Plo  AscentBasedIo.Plo  AspenEthernetIo.Plo  CamCfgMatrix.Plo  CamGen2Base.Plo  CamGen2ModeFsm.Plo  CamHelpers.Plo  CamRegMirror.Plo  CamUsbIo.Plo  CameraInfo.Plo  CameraIo.Plo  CameraStatusRegs.Plo  IAltaSerialPortIo.Plo  ILog.Plo  ITimer.Plo  ModeFsm.Plo  helpers.Plo  libCurlWrap.Plo
src/APOGEE.sav/apogee/libapogee-3.0.3234/apogee/.libs/: libapogee.lai
src/APOGEE.sav/apogee/libapogee-3.0.3234/apogee/linux/: LinuxTimer.lo  Makefile.am  UdpSocketLinux.lo
src/APOGEE.sav/apogee/libapogee-3.0.3234/apogee/linux/.deps/: GenOneLinuxUSB.Plo  LoggerSyslog.Plo  UdpSocketLinux.Plo  linuxHelpers.Plo
src/APOGEE.sav/apogee/libapogee-3.0.3234/doc/doxygen/: Makefile  Makefile.am  doxygen_sqlite3.db
src/APOGEE.sav/apogee/libapogee-3.0.3234/doc/doxygen/html/: _alta_8h_source.html  _apogee_cam_8h_source.html  _ascent_8h_source.html  _cam_gen2_base_8h_source.html  _camera_info_8h_source.html  _camera_status_regs_8h_source.html  _find_device_ethernet_8h_source.html  _quad_8h_source.html  annotated.html  class_alta-members.html  class_apogee_cam.html  class_apogee_filter_wheel.html  class_ascent-members.html  class_camera_status_regs-members.html  class_find_device_usb-members.html  class_find_device_usb.html  class_hi_c.html  classes.html  doc_8h_source.html  exceptionhandling.html  files.html  functions.html  functions_0x63.html  functions_0x66.html  functions_0x6e.html  functions_0x74.html  functions_0x77.html  functions_0x7e.html  functions_c.html  functions_d.html  functions_enum.html  functions_f.html  functions_func.html  functions_func_0x67.html  functions_func_0x69.html  functions_func_0x7e.html  functions_func_c.html  functions_func_g.html  functions_func_i.html  functions_func_o.html  (+17 more)
src/APOGEE.sav/apogee/libapogee-3.0.3234/examples/: AscentExample  AscentExample.cpp  AspenExample  BulkTDI  ExternalTrigger  ExternalTrigger.cpp  FilterWheel.cpp  Kinetics.cpp  Makefile  Makefile.am  MultiCamera.cpp  SimpleExposure  SimpleExposure.cpp
src/APOGEE.sav/apogee/libapogee-3.0.3234/examples/.deps/: BulkSequence.Po  BulkTDI.Po  StreamingTDI.Po  apgSampleCmn.Po
src/APOGEE.sav/apogee/libapogee-3.0.3234/examples/.libs/: BulkSequence  ExternalShutter  Kinetics  MultiCamera  StreamingTDI
src/APOGEE.sav/apogee/libapogee-3.0.3234/jLibapogee/src/: ApogeeCam.java  Aspen.java  ErrorType.java  FanMode.java  FindDeviceEthernet.java  FindDeviceUsb.java  Makefile.am  Makefile.in  SWIGTYPE_p_CameraStatusRegs__BasicStatus.java  SWIGTYPE_p_std__vectorT_std__string_t.java  SWIGTYPE_p_unsigned_char.java  SerialFC.java  StrDb.java  TriggerMode.java  libjlibapogee_la-jlibapogee_wrap.lo
src/APOGEE.sav/apogee/libapogee-3.0.3234/jLibapogee/src/.libs/: libjlibapogee.lai
src/APOGEE.sav/apogee/libapogee-3.0.3234/pyLibapogee/src/: Makefile  Makefile.am  Makefile.in
src/APOGEE.sav/apogee/libapogee-3.0.3234/pyLibapogee/src/.libs/: _pylibapogee.so.0.0.0
src/APOGEE/apogee/apps/CPP/speedtesting-1.0/: Makefile.in  README  config.status  configure  configure.ac
src/APOGEE/apogee/apps/CPP/speedtesting-1.0/src/: ApgTimer.cpp  ApgTimer.h  ITimer.h  LinuxTimer.cpp  Makefile  Makefile.am  Makefile.in  speedTesting.cpp
src/APOGEE/apogee/apps/CPP/speedtesting-1.0/src/.deps/: ApgTimer.Po  ITimer.Po  LinuxTimer.Po
src/APOGEE/apogee/apps/python/: Makefile.am  aclocal.m4  configure  configure.ac
src/APOGEE/apogee/apps/python/ApexUI/: .project
src/APOGEE/apogee/apps/python/ApexUI/src/: ApexCtrlTab.py  ApexInfoTab.py  ApexSetupTab.py  ApexUi.py  TabBase.py  TestCamAlta.h  TestCamAscent.cpp  TestCamAscent.h  TestCamHelpers.cpp  TestCamHelpers.h  TestCamHiC.cpp  ViewerDlg.py  defaults.txt  designerApex.ui  dlgFindUi.py
src/APOGEE/apogee/apps/python/autom4te.cache/: output.0  output.2  requests  traces.4
src/APOGEE/apogee/apps/python/examples/: Makefile.am  MultiCamera.py
src/APOGEE/apogee/apps/python/pyWrapApg/: pyApg.py  pyWrapApg.rc  resource.h  version.h
src/APOGEE/apogee/apps/python/pyfits-3.1.1/src/: fitsio.c
src/APOGEE/apogee/apps/python/src/: _pylibapogee.la
src/APOGEE/apogee/apps/python/src/.deps/: _pylibapogee_la-pylibapogee_wrap.Plo
src/APOGEE/apogee/apps/python/src/.libs/: _pylibapogee.la
src/APOGEE/apogee/apps/python/test/: Makefile.am  Makefile.in  SetupDevice.py  normFastSwitching.py  randomImgCount.py  tdiStress.py
(+2012 files in other folders)
