noinst_LTLIBRARIES = libapogeelinux.la
libapogeelinux_la_SOURCES = GenOneLinuxUSB.cpp \
GenOneLinuxUSB.h \
linuxHelpers.cpp \
linuxHelpers.h \
LinuxTimer.cpp \
LinuxTimer.h \
LoggerSyslog.cpp \
LoggerSyslog.h \
UdpSocketLinux.cpp \
UdpSocketLinux.h

AM_CPPFLAGS = -I$(top_srcdir)/apogee $(ALT_BULKIO_DEFINE)
