AC_INIT(speedTesting, 1.0, support@ccd.com)
AM_INIT_AUTOMAKE(speedTesting, 1.0)
AM_INIT_AUTOMAKE([-Wall -Werror])
AC_CONFIG_SRCDIR([src/speedTesting.cpp])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_MACRO_DIR([m4])

# GCC PROGRAM CHECKS
AC_PROG_CXX


#  STD LIB CHECKS
AC_CHECK_HEADERS([stdint.h])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
